--- a/app/core/templates/core/testpage.html
+++ b/app/core/templates/core/testpage.html
@@ -2,151 +2,80 @@
 
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}<title>{{ prodLine }} Issue Sheets {{ issueDate }}</title>{% endblock %}
+{% block title %}<title>Upcoming Blends</title>{% endblock %}
 {% block scripts %}<link rel="stylesheet" type="text/css" href ="{% static 'core/issuesheets.css' %}">{% endblock %}
 
 {% block content %}
-    {% for item in thisLineRunsQS %}
-        <div class="contentarea">
-            <div class='header'>
-                <div class='pagetitle'>BLENDING ISSUE SHEET</div>
-                <div class='headercontainer'>
-                    <div>DATE: </div>
-                    <div class="widener">
-                        <div class='centerer'>{{ issueDate }}</div>
+<h1>Select Blends to Count</h1>
+<br>
+<button id="create_list">Create Count List</button>
+<br>
+<div id="selection_table" class="table-responsive-sm">
+    <table class="table text-left table-bordered">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Count?</th>
+                <th scope="col">Blend</th>
+                <th scope="col">Description</th>
+                <th scope="col">Start Time</th>
+                <th scope="col">Exp. Qty</th>
+                <th scope="col">Last Count</th>
+                <th scope="col">Last Transaction</th>
+                <th scope="col">Shortage</th>
+                <th scope="col">Report</th>
+            </tr>
+        </thead>
+        {% for item in upcoming_blends %}
+            <tr>
+                <td id="cb">
+                    <input type="checkbox" name={{ item.blend_pn }}></input>
+                </td>
+                <td>{{ item.blend_pn }}</td>
+                <td>{{ item.blend_desc }}</td>
+                <td>{{ item.starttime|floatformat:2 }}</td>
+                <td>{{ item.expected_on_hand|floatformat:2 }}</td>
+                <td>{{ item.last_count|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
+                <td>{{ item.last_transaction_type }}: {{ item.last_transaction_date|date:"m-d-y" }}</td>
+                <td>
+                    {% if item.short_hour == 0 %}
+                        No
+                    {% else %}
+                        {{ item.short_hour|floatformat:2 }}
+                    {% endif %}
+                </td>
+                <td>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            Select
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="/core/reports">Lot Numbers</a></li>
+                            <li><a class="dropdown-item" href="/core/reports">All Upcoming Runs</a></li>
+                            <li><a class="dropdown-item" href="/core/reports">Transaction History</a></li>
+                            <li><a class="dropdown-item" href="/core/reports">Count History</a></li>
+                        </ul>
                     </div>
-                </div>
-                <div class='headercontainer'>
-                    <div>LINE: </div>
-                    <div class="widener">
-                        <div class='centerer'>{{ prodLine }}</div>
-                    </div>
-                </div>
-                <div class='headercontainer'>
-                    <div>PRODUCT: </div>
-                    <div class="widener">
-                        <div>&emsp;{{ item.blend_pn }}&emsp;&emsp;&emsp;&emsp;{{ item.blend_desc }}</div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="batchcontainer">
-                <div class='triples'>
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum1 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty1 }}</div>
-                        </div>
-                    </div>
-
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum2 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty2 }}</div>
-                        </div>
-                    </div>
-                    
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum3 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty3 }}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="headercontainer commentscontainer">
-                <div>ADDITIONAL COMMENTS:</div>
-                <div class="widener"></div>
-            </div>
-
-            <div class="batchcontainer">
-                <div class='triples'>
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum4 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty4 }}</div>
-                        </div>
-                    </div>
-
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum5 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty5 }}</div>
-                        </div>
-                    </div>
-                    
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum6 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty6 }}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="batchcontainer">
-                <div class='triples'>
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum7 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty7 }}</div>
-                        </div>
-                    </div>
-
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum8 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty8 }}</div>
-                        </div>
-                    </div>
-                    
-                    <div class='triplecontainer'>
-                        <div>
-                            <div>BATCH #:&nbsp;</div>
-                            <div>GAL ISSUED:&nbsp;</div>
-                        </div>
-                        <div>
-                            <div>{{ item.batchnum9 }}</div>
-                            <div class='centerer widener'>{{ item.batchqty9 }}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <p style="page-break-before: always; color:white;">.</p>
-    {% endfor %}
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
+</div>
+<script>
+    // https://stackoverflow.com/questions/1287592/get-checkbox-list-values-with-jquery
+    $(document).ready(function() {
+        $('#create_list').click(function() {
+            let part_numbers = [];
+            $('td input:checked').each(function() {
+                part_numbers.push($(this).attr("name"));
+            });
+            console.log(part_numbers)
+            // https://stackoverflow.com/questions/4505871/good-way-to-serialize-a-list-javascript-ajax
+            let encoded_list = btoa(JSON.stringify(part_numbers));
+            console.log(encoded_list)
+            base_url = window.location.href.split('core')[0];
+            // https://stackoverflow.com/questions/503093/how-do-i-redirect-to-another-webpage
+            window.location.replace(base_url + "core/countlist/add/"+encoded_list)
+        });
+    });
+</script>
 {% endblock content %}
