--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,27 +46,32 @@
                                         !-->
                                     </ul>
                                 </li>
-                                
+                                <!-- Blend Auditing Links -->
                                 {% if user.is_staff %}
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Blend Auditing
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                      <li><a class="dropdown-item" href="/core/blendshortages">Blend Shortages</a></li>
-                                      <li><a class="dropdown-item" href="/core/allupcomingproduction/?page=1">All Production</a></li>
-                                      <li><a class="dropdown-item" href="/core/upcomingcounts">Blends Used Soon</a></li>
-                                      <li><hr class="dropdown-divider"></li>
-                                      <li><a class="dropdown-item" href="/core/blendschedule/all">Scheduled Blends</a></li>
+                                        <li><a class="dropdown-item" href="/core/chemshortages">Chemical Shortages</a></a>
+                                        <li><a class="dropdown-item" href="/core/blendshortages">Blend Shortages</a></li>
+                                        <li><a class="dropdown-item" href="/core/productionblendruns/?page=1">Production Blend Runs</a></li>
+                                        <li><a class="dropdown-item" href="/core/blendcountsheets">Blend Count Sheets</a></li>
+                                        <li><hr class="dropdown-divider"></li>
+                                        <li><a class="dropdown-item" href="/core/blendschedule/all">Scheduled Blends</a></li>
                                     </ul>
                                 </li>
+                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/lotnumrecords">Lot Numbers</a>
                                 </li>
+                                
                                 {% endif %}
+                                <!--   ***Added to Blend Auditing menu*** 
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/chemshortages">Chem Shortages</a>
                                 </li>
+                                -->
                                 <!---
                                     <li class="nav-item">    
                                         <a class="nav-link" href="/core/reports">Reports</a>
