--- a/app/prodverse/templates/prodverse/productionschedule.html
+++ b/app/prodverse/templates/prodverse/productionschedule.html
@@ -53,7 +53,7 @@
         node.nodeValue = node.nodeValue.replace(/[^\x00-\x7F]/g, "");
       });
       // Link to Specsheet
-      addItemCodeButtons()
+      addItemCodeLinks()
     });
     // Put buttons in array
     const scheduleButtons = ['horixbutton', 'inlinebutton', 'blisterbutton', 'pdbutton', 'jbbutton', 'oilbutton', 'kitbutton'];
@@ -92,8 +92,7 @@
               };
               
               // Link to Specsheet
-              addItemCodeButtons()
-
+              addItemCodeLinks()
           });
         });
       });
@@ -115,25 +114,65 @@
     return textNodes;
   };
 
-  function addItemCodeButtons() {
-    $('td:nth-child(3)').each(function() {
-      var cell = $(this);
-      if (cell.text().trim().length > 0 && !containsWhitespace(cell.text()) && cell.text() !== "P/N") {
-        var itemCode = cell.text();
-        var link = $('<a>', {
-          href: '/prodverse/specsheet/' + encodeURIComponent(itemCode),
-          text: itemCode,
-          target: '_blank'
+  function addItemCodeLinks() {
+    const tableRows = Array.from(document.querySelectorAll('table tr'));
+    let qtyIndex;
+    
+    for (const [i, row] of tableRows.entries()) {
+      const cells = Array.from(row.querySelectorAll('td'));
+      for (const [j, cell] of cells.entries()) {
+        if (cell.textContent.trim() === "Qty") {
+          qtyIndex = j + 1;
+          break;
+        }
+      }
+      if (qtyIndex) {
+        break;
+      }
+    }
+    
+    const cells = Array.from(document.querySelectorAll('td:nth-child(3)'));
+    cells.forEach(cell => {
+      const text = cell.textContent.trim();
+      if (text.length > 0 && !text.includes(' ') && text !== "P/N") {
+        const itemCode = text;
+        const qty = parseInt(cell.parentElement.querySelector(`td:nth-child(${qtyIndex})`).textContent.trim().replace(',', ''), 10);
+        const dropdownHTML = `
+          <div class="dropdown">
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/prodverse/specsheet/${encodeURIComponent(itemCode)}" target="blank">
+                Spec Sheet
+              </a></li>
+              <li><a class="dropdown-item" href="/prodverse/pickticket/${encodeURIComponent(itemCode)}?schedule_qty=${encodeURIComponent(qty)}" target="blank">
+                Pick Ticket
+              </a></li>
+            </ul>
+          </div>
+          ${itemCode}
+        `;
+        cell.innerHTML = dropdownHTML;
+        cell.style.cursor = "pointer";
+        cell.addEventListener("click", e => {
+          const dropdowns = Array.from(document.querySelectorAll(".dropdown-menu.show"));
+          dropdowns.forEach(dropd => {
+            dropd.classList.remove("show");
+          });
+          const dropdown = cell.querySelector(".dropdown-menu");
+          dropdown.classList.toggle("show");
+          e.stopPropagation();
         });
-        cell.html(link);
       }
     });
-  }
-
-  function containsWhitespace(str) {
-    return str.includes(' ');
-  }
-
+    
+    document.addEventListener("click", e => {
+      if (!e.target.closest("#dropdownMenuButton1")) {
+        const dropdowns = Array.from(document.querySelectorAll(".dropdown-menu.show"));
+        dropdowns.forEach(dropdown => {
+          dropdown.classList.remove("show");
+        });
+      }
+    });
+  };
 </script>
 {% endblock content %}
 <!-- End Body -->
