--- a/app/prodverse/templates/prodverse/specsheet.html
+++ b/app/prodverse/templates/prodverse/specsheet.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 <!-- Header Blocks -->
-{% block title %}<title>CHANGE THIS PAGE TITLE</title>{% endblock %}
+{% block title %}<title>Spec Sheet for {{ item_code }}</title>{% endblock %}
 
 {% block scripts %} 
     <link rel="shortcut icon" type="image/png" href="{% static 'core\kpkhomescrico.png' %}">
